kubernetes/applications/media/servarr/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - name: web
      port: 80
      targetPort: http
